2014-04-02 German Arias <germanandre@gmx.es>

	* Framework/English.lproj/SaveModified.gorm: Use class PCAuxiliaryWindow
	to not display menu.

2014-04-02 German Arias <germanandre@gmx.es>

	* Framework/PCFileCreator.m: Removed two last commits. There is
	something wrong with these.

2014-03-30 German Arias <germanandre@gmx.es>

	* Framework/PCFileCreator.m: Fix last change to ensure all string in the
	file is UTF-8, since GNU make can't handle UTF-16 (this change is for
	Windows).

2014-03-27 German Arias <germanandre@gmx.es>

	* Framework/PCFileCreator.m: Be sure to use an UTF8 string for the user
	name on Windows.

2014-03-08 German Arias <germanandre@gmx.es>

	* Framework/PCFileManager.m (-isTextFile:): Rewrite this method to work
	on Windows.

2014-03-07 German Arias <germanandre@gmx.es>

	* Framework/PCProjectManager.m: Remove the extension returned by native
	panel.

2014-03-02 German Arias <germanandre@gmx.es>

	* PCAppController.m: For Windows add a menu with all types of projects.
	So the user can select directly the type of project he want.
	* Headers/ProjectCenter/PCProjectManager.h:
	* Framework/PCProjectManager.m: Add the neccesary changes to use the
	selected type of project at main menu (on Windows).
	* PCMenuController.m: Use the new method to make a new project.

2014-01-17 German Arias <germanandre@gmx.es>

	* English.lproj/ProjectCenter.gorm: Connect option "Line Number..."
	to first responder (I was sure I did this before, but no).

2014-01-13 Riccardo Mottola <rm@gnu.org>

	* Framework/PCFileManager.m
	* Headers/ProjectCenter/PCFileManager.h
	Convenience method to find executables, by Richard Frith-Macdonald

	* Modules/Preferences/Build/PCBuildPrefs.m
	* Modules/Preferences/Misc/PCMiscPrefs.m
	Use the convenience method to determine better defaults for make and gdb.

2013-12-17 Riccardo Mottola <rm@gnu.org>

	* Framework/PCProjectLauncher.m
	Check that the executable exists before running it.

2013-10-20 German Arias <germanandre@gmx.es>
